# deed-ocr

./: .gitignore  README.md  counties_list.json  env.example  instruction.csv  plss_checker.py  pyproject.toml  pytest.ini  requirements.txt
deed_ocr/: __init__.py  __main__.py  cli.py  main.py  workflow.py  workflow_vision.py
deed_ocr/extractors/: __init__.py  llm.py  regex.py
deed_ocr/models/: __init__.py  layout.py  vision_llm.py
deed_ocr/ocr/: __init__.py  gemini_ocr.py  vision_ocr.py
deed_ocr/utils/: __init__.py  excel_converter.py  pdf_converter.py  retry_helper.py  state_abbreviation.py  trs_validator.py
docs/: SIMPLE_WORKFLOW_README.md  TRS_VALIDATION_README.md  final_workflow.md  llm-enhanced-architecture.md  workflow.md
examples/: retry_failed_processes.py
scripts/: add_abbrev_to_counties.py  convert_final_result_to_excel.py  demo_geodatabase_loading.py  demo_multi_county_validation.py  test_trs_validation.py
test/: test_document_state_validation.py  test_gemini_ocr.py  test_legal_description_extraction.py  test_new_pdf_processing.py  test_pdf_to_images.py  test_simple_workflow.py
tests/: __init__.py
